--- a/app/views/listings/description.html.erb
+++ b/app/views/listings/description.html.erb
@@ -6,7 +6,7 @@
 	        <%= render 'partial/verticalnavbar'%>
 	    </div>
 	    <div class="col-md-9">
-	        <div class="panel panel-info">
+	        <div class="panel panel-success">
 	            <div class="panel-heading">
 	                <div class="text-center">
 	                    <span style="font-size:24px;">プラン情報の作成</span>
@@ -46,7 +46,6 @@
 	                            </div>
 	                        </div>
 	                    </div>
-	                    
 	                    <div class="row">
 							<div class="col-md-12 select">
 								<div class="form-group">
