--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
 	<div class="row row-space">
 	    <div class="col-md-10 col-md-offset-1">
-	        <div class="panel panel-default">
+	        <div class="panel panel-success">
 	            <div class="panel-heading">
 	                <div class="text-center">
 	                    <span style="font-size:18px;">掲載一覧</span>
@@ -29,8 +29,8 @@
 	                            </div>
 	                        </div>
 	                    </li>
-	                    <hr>
 	                <% end %>
+	                <hr>
 	            </ul>
 	        </div>
 	    </div>
