--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -28,7 +28,7 @@
             <%= image_tag current_user.image, class:"img-circle" %>
             <%= current_user.name %>
           <% else %>
-            <%= current_user.email %>
+            <%= current_user.email.split("@")[0] %>
           <% end %>
           <span class="caret"></span>
           </a>
