--- a/app/views/listings/address.html.erb
+++ b/app/views/listings/address.html.erb
@@ -6,7 +6,7 @@
 	        <%= render 'partial/verticalnavbar'%>
 	    </div>
 	    <div class="col-md-9">
-	        <div class="panel panel-default">
+	        <div class="panel panel-success">
 	            <div class="panel-heading">
 	                <div class="text-center">
 	                    <span style="font-size:24px;">住所の編集</span>
@@ -29,7 +29,7 @@
 	                    <h4>My Google Maps</h4>
 	                    <div id="map"></div>
 
-	                    <div class="actions">
+	                    <div class="actions" style="margin-top:30px;">
 	                        <%= f.submit "更新", class: "btn btn-danger" %>
 	                    </div>
 	                <% end %>
