--- a/app/views/listings/photos.html.erb
+++ b/app/views/listings/photos.html.erb
@@ -6,7 +6,7 @@
 	        <%= render 'partial/verticalnavbar'%>
 	    </div>
 	    <div class="col-md-9">
-	        <div class="panel panel-default">
+	        <div class="panel panel-success">
 	            <div class="panel-heading">
 	                <div class="text-center">
 	                    <span style="font-size:24px;">リスティング写真のアップ</span>
