--- a/app/views/listings/price.html.erb
+++ b/app/views/listings/price.html.erb
@@ -6,7 +6,7 @@
 	        <%= render 'partial/verticalnavbar'%>
 	    </div>
 	    <div class="col-md-9">
-	        <div class="panel panel-default">
+	        <div class="panel panel-success">
 	            <div class="panel-heading">
 	                <div class="text-center">
 	                    <span style="font-size:24px;">料金の設定</span>
@@ -24,7 +24,7 @@
                           </div>
                         </div>
                         <span class="glyphicon glyphicon-chevron-right"></span><a class="warning" href="http://ja.exchange-rates.org/">自国通貨に計算し直す場合には、こちらのコンバーターをご利用ください。</a>
-                        <div class="actions">
+                        <div class="actions" style="margin-top:30px;">
                             <%= f.submit "更新", class: "btn btn-danger" %>
                         </div>
 	                <% end %>
