First commit. Adding a README.

--- a/app/views/listings/photos.html.erb
+++ b/app/views/listings/photos.html.erb
@@ -28,6 +28,12 @@
 	                        <%= f.submit "Upload image" %>
 	                    </div>
 	                <% end %>
+
+                  <div class="photo-attention alert alert-warning" role="alert" style="margin-top:20px;">
+                          <ul>
+                            <li><span class="glyphicon glyphicon-chevron-right"></span>最初の写真が画面トップのイメージ写真になります。</li>
+                          </ul>
+                        </div>
 	            </div>
 	        </div>
 	    </div>
