--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -195,20 +195,41 @@ body {
     font-size: 16px;
 }
 
-.sidebar-nav .navbar-default .navbar-nav > li{
+.sidebar-nav .navbar-default .navbar-nav > li > .active{
     border-right: 1px solid #ddd;
     border-left: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
-    background-color: #fff
+    background-color: #ddd;
 }
 
 .sidebar-nav .navbar-default .navbar-nav > li:first-child {
     border-top: 1px solid #ddd;
 }
 
-.sidebar-nav .navbar-toggle {
-    background-color: #337ab7;
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+    z-index: 2;
+    color: #fff;
+    background-color: #ddd;
+    border-color: #ddd;
 }
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #555;
+    background-color: #ddd;
+}
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
+
+
+
 
 // dropzone.jsのcss
 @media (max-width: 768px){
@@ -244,6 +265,16 @@ body {
     list-style: none;
 }
 
+.listing-title{
+  font-size:18px;
+  color:#a99e93;
+}
+
+.listing-time{
+  color:#a99e93;
+  float:left;
+  margin: 20px 20px 0 0;
+}
 
 
 
@@ -492,9 +523,35 @@ html, body {
   transition: 0.5s;
 }
 
+.confirmation-btn{
+  margin-top: 1em;
+}
+
 .confirmation-btn a{
   color: #fff;
   text-decoration: none;
+}
+
+
+/*カレンダー用編集*/
+.class-holiday {
+    background: #337ab7 !important;
+    color: #fff !important;
+}
+
+.class-holiday > .ui-state-default {
+    background: #337ab7 !important;
+    color: #fff !important;
+}
+
+.calendar .ui-datepicker {
+    width: 100%;
+}
+.calendar .ui-datepicker .ui-datepicker-current-day {
+    background-color: #fff;
+}
+#datepicker .ui-datepicker .ui-datepicker-current-day a{
+    color: #222;
 }
 
 
