--- a/app/assets/stylesheets/jquery-bootstrap-datepicker.css
+++ b/app/assets/stylesheets/jquery-bootstrap-datepicker.css
@@ -49,7 +49,8 @@
 }
 
 .ui-datepicker .ui-icon {
-  display: none;
+  /*display: none;*/
+  overflow: visible;
 }
 .ui-datepicker .ui-datepicker-calendar {
   table-layout: fixed;
@@ -116,10 +117,7 @@
 }
 
 
-//田中調整
-.ui-datepicker-header .ui-widget-header .ui-helper-clearfix .ui-corner-all a{
-	color: balck!important;
-}
+
 
 .select-time{
 	-webkit-appearance: none;
