--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -15,14 +15,14 @@
 	                        <div class="row-table">
 	                            <div class="col-sm-2 col-md-2">
 	                                <div class="panel-list-img text-center">
-	                                    <%= image_tag listing.photos[0].image.url(:medium) if listing.photos.length > 0  %>    
-	                                </div> 
+	                                    <%= image_tag listing.photos[0].image.url(:medium) if listing.photos.length > 0  %>
+	                                </div>
 	                            </div>
 
 	                            <div class="col-sm-7 col-md-7">
-	                                <span class="listing-title"><%= listing.service_type %></span>
-	                                <p>作成日:<%= listing.created_at %></p>
-	                                <p>更新日:<%= listing.updated_at %></p>
+	                                <span class="listing-title"><%= listing.plan_title %></span>
+	                                <p class="listing-time">作成日:<%= listing.created_at.strftime("%Y-%m-%d") %></p>
+	                                <p class="listing-time">更新日:<%= listing.updated_at.strftime("%Y-%m-%d") %></p>
 	                            </div>
 	                            <div class="col-sm-3 col-md-3">
 	                                <%= link_to "残り5ステップ", manage_listing_basics_path(listing), class: "btn btn-primary pull-right" %>
