--- a/app/views/partial/_verticalnavbar.html.erb
+++ b/app/views/partial/_verticalnavbar.html.erb
@@ -19,7 +19,7 @@
     </div>
     <div class="navbar-collapse collapse sidebar-navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="<%= 'active' if controller?("listings") && action?("basics") %> listing-checked" id = "nav-basics">
+        <li class="<%= 'active' if controller?("listings") && action?("basics") %> list-group-item" id = "nav-basics">
           <%= link_to "基本事項", manage_listing_basics_path(@listing) %>
         </li>
         <li class="<%= "active" if controller?("listings") && action?("description") %> list-group-item" id="nav-description">
