--- a/app/views/reservations/fix.html.erb
+++ b/app/views/reservations/fix.html.erb
@@ -71,7 +71,9 @@
 
 				    <div class="row confirmation-btn">
 				    	<div class="col-md-12">
-				    	　　<button type="button" class="btn btn-success btn-block"><%= link_to "予約を変更する。", edit_listing_reservation_path(@listing,@reservation) %></button>
+				    	    <button type="button" class="btn btn-warning btn-block">
+				    	         <%= link_to "予約を変更する。", edit_listing_reservation_path(@listing, @reservation) %>
+				    	    </button>
 				    	</div>
 				    </div>
 	            </div>
@@ -91,4 +93,17 @@
         });
     });
 </script>
+
+<script>
+  $(".fix_scheducel").on("click", function(){
+    $.ajax
+    type: "GET"
+    url: 
+    success: (data)
+      
+    return;
+  return;
+});
+</script>
+
 
